--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nest-winston": "^1.10.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "uuid": "^11.0.5",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
