--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leocodeio-njs/njs-logging",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "basic logging module for nestjs",
   "author": "leocodeio",
   "license": "MIT",
@@ -26,13 +26,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@leocodeio-njs/njs-config": "^0.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "nest-winston": "^1.10.1",
+    "pg": "^8.13.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "uuid": "^11.0.5",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
