--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,4 +70,4 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.INTERNAL_GITHUB_TOKEN }} 
