--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
         with:
           name: dist
           path: dist/
-          
+      
   publish:
     needs: build
     runs-on: ubuntu-latest
@@ -52,6 +52,9 @@ jobs:
           node-version: '20'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@leocodeio-njs'
+      
+      - name: Configure npm to use the authentication token
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
       
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -70,4 +73,4 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.INTERNAL_GITHUB_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
