--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,7 +54,7 @@ jobs:
           scope: '@leocodeio-njs'
       
       - name: Configure npm to use the authentication token
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" > ~/.npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_GITHUB_TOKEN }}" > ~/.npmrc
       
       - name: Download build artifacts
         uses: actions/download-artifact@v4
