--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,9 +55,11 @@ jobs:
       
       - name: Configure npm to use the authentication token
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" > ~/.npmrc
+
+      - name: Configure npm to use the authentication token
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" 
       
-      
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
