--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,7 +54,7 @@ jobs:
           scope: '@leocodeio-njs'
       
       - name: Configure npm to use the authentication token
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" 
+        run: echo "@leocodeio-njs:registry=https://npm.pkg.github.com\n//npm.pkg.github.com/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" > ~/.npmrc
       
       - name: Configure npm to use the authentication token
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" > ~/.npmrc
