--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Correctly set in `env`
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -43,6 +45,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Correctly set in `env`
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -55,7 +59,7 @@ jobs:
           scope: '@leocodeio-njs'
 
       - name: Authenticate with GitHub Packages
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.INTERNAL_GITHUB_SECRET }}" > ~/.npmrc
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc  # Fixed to use GITHUB_TOKEN
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -73,5 +77,3 @@ jobs:
 
       - name: Publish to GitHub Packages
         run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
